{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 85,
  "lineage": "47a5bcf2-46dc-419e-c497-b5f81a7ce9fe",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-31T11:04:58.156-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/meta-ad-studio/global/firewalls/e2e-vpc-allow-health-checks",
            "log_config": [],
            "name": "e2e-vpc-allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/meta-ad-studio/global/networks/staging-vpc",
            "priority": 1000,
            "project": "meta-ad-studio",
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-ad-studio/global/firewalls/e2e-vpc-allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-08-31T11:04:58.594-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/meta-ad-studio/global/firewalls/e2e-vpc-allow-internal",
            "log_config": [],
            "name": "e2e-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/meta-ad-studio/global/networks/staging-vpc",
            "priority": 1000,
            "project": "meta-ad-studio",
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-ad-studio/global/firewalls/e2e-vpc-allow-internal",
            "source_ranges": [
              "10.10.10.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/meta-ad-studio/global/networks/staging-vpc",
            "mtu": 0,
            "name": "staging-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "788258511986272362",
            "project": "meta-ad-studio",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-ad-studio/global/networks/staging-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "gke_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-30T08:33:36.196-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/meta-ad-studio/regions/us-central1/subnetworks/gke-subnet",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "gke-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/meta-ad-studio/global/networks/staging-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "meta-ad-studio",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-ad-studio/regions/us-central1/subnetworks/gke-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}